--- a/public/static/chat/css/main.css
+++ b/public/static/chat/css/main.css
@@ -207,7 +207,8 @@ ul {
 .windows_body {
     padding: 15px;
     width: 100%;
-    height: 440px;
+    height: 504px;
+   /* height: 440px; */
     overflow-y: scroll;
 }
 
