--- a/public/static/chat/css/client.css
+++ b/public/static/chat/css/client.css
@@ -304,7 +304,7 @@ ul {
 }
 
 .windows_input .toolbar .send {
-    width: 160px;
+    width: 120px;
     height: 44px;
     background: #ddd;
     color: #333;
@@ -314,6 +314,8 @@ ul {
     line-height: 44px;
     padding: 0;
     border: 0;
+    transition-duration:0.4s;
+    border-radius:4px;
 }
 
 .windows_input .toolbar .send:hover {
