选择展示阴影

--- a/public/static/chat/css/main.css
+++ b/public/static/chat/css/main.css
@@ -384,6 +384,10 @@ ul {
     display: none;
 }
 
+.online_item.background-user{
+    background-color:beige;
+}
+
 /* ---------------- 响应式适配 ---------------- */
 
 @media only screen and (min-width: 641px ) {
