--- a/public/static/chat/css/client.css
+++ b/public/static/chat/css/client.css
@@ -291,7 +291,7 @@ ul {
 .windows_input .toolbar {
     width: 100%;
     height: 43px;
-    border-top: 1px solid #e7e7e7
+    /*border-top: 1px solid #e7e7e7*/
 }
 
 .windows_input .toolbar .left {
@@ -300,22 +300,24 @@ ul {
 }
 
 .windows_input .toolbar .right {
-    float: right
+    float: right;
+    line-height: 43px;
 }
 
 .windows_input .toolbar .send {
-    width: 120px;
-    height: 44px;
+    width: 80px;
+    height: 30px;
+    line-height: 30px;
+    margin-right: 12px;
     background: #ddd;
     color: #333;
     text-align: center;
-    font-weight: 700;
+    /*font-weight: 700;*/
     font-size: 14px;
-    line-height: 44px;
     padding: 0;
     border: 0;
-    transition-duration:0.4s;
-    border-radius:4px;
+    transition-duration: 0.4s;
+    border-radius: 4px;
 }
 
 .windows_input .toolbar .send:hover {
