--- a/public/static/chat/css/client.css
+++ b/public/static/chat/css/client.css
@@ -182,7 +182,7 @@ ul {
 .windows_top {
     clear: both;
     padding: 0 25px;
-    height: 2pc;
+   /* height: 2pc;*/
     border-bottom: 1px solid #e7e7e7;
     font-weight: 700
 }
